Fix UI detail: adjust main padding on mobile to allow full width for power rank

--- a/items/static/items/css/mobile.css
+++ b/items/static/items/css/mobile.css
@@ -22,6 +22,7 @@
     }
 
     main {
+        padding: 5px !important;
         overflow: visible !important;
     }
 
